# posse-media

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yml  refresh-tokens.yml
content/: 2026-07-21-ejemplo.yaml  2026-07-23-homelab-proxmox-ia-gobernada.yaml
content/assets/: diagrama-homelab.html
context/: perfil.md  proyectos.md
docs/: RUNBOOK.md
scripts/: render-diagram.py
site/: Caddyfile  DEPLOY.md  docker-compose.yml
site/public/: index.html
site/public/diagramas/: homelab-serie-1.html
src/posse/: __init__.py  __main__.py  backlog.py  cli.py  config.py  content_store.py  context.py  logging_conf.py  models.py  preview.py  publisher.py
src/posse/auth/: __init__.py  oauth.py  token_store.py
src/posse/generators/: __init__.py  draft.py  images.py  llm.py  repurpose.py
tests/: conftest.py  test_alt_backends.py  test_backlog.py  test_comment.py  test_content_store.py  test_context.py  test_generators.py  test_images.py  test_linkedin_client.py  test_linkedin_images.py  test_llm_backends.py  test_models.py  test_oauth.py  test_preview.py  test_publisher_idempotent.py  test_token_store.py
